<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/sbb_main"
            android:layout_width="match_parent"
            android:layout_height="@dimen/banner_height"
            android:scaleType="centerCrop"
            android:src="@drawable/sbb_main"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/GeneralTextViewBoxAllPadding"
            android:id="@+id/sbb_intro_one"
            android:layout_below="@id/sbb_main"
            android:text="@string/sbb_intro_one"
            />

        <TextView
            style="@style/GeneralTextViewBoxLeftRightPadding"
            android:id="@+id/sbb_intro_two"
            android:layout_below="@id/sbb_intro_one"
            android:text="@string/sbb_intro_two"
            />

        <TextView
            style="@style/GeneralTextViewBoxAllPadding"
            android:id="@+id/sbb_intro_three"
            android:layout_below="@id/sbb_intro_two"
            android:text="@string/sbb_intro_three"
            />

        <ImageView
            android:id="@+id/sbb_dosto"
            android:layout_width="match_parent"
            android:layout_height="@dimen/banner_height"
            android:layout_below="@id/sbb_intro_three"
            android:scaleType="centerCrop"
            android:src="@drawable/dost"
            />

        <TextView
            style="@style/GeneralTextViewBoxAllPadding"
            android:id="@+id/dosto_intro"
            android:layout_below="@id/sbb_dosto"
            android:text="@string/sbb_dosto_intro"
            />

        <TextView
            style="@style/GeneralTextViewBoxAllPadding"
            android:id="@+id/characteristics"
            android:layout_below="@id/dosto_intro"
            android:text="Characteristics"
            />

        <TableLayout
            android:id="@+id/table_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/characteristics"
            android:padding="@dimen/padding_standard"
            >

            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:text="@string/bullet_point" />
                <TextView
                    android:layout_column="2"
                    android:layout_width="wrap_content"
                    android:text="@string/dosto_characteristic_one" />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:text="@string/bullet_point" />
                <TextView
                    android:layout_column="2"
                    android:layout_width="wrap_content"
                    android:text="@string/dosto_characteristic_two" />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:text="@string/bullet_point" />
                <TextView
                    android:layout_column="2"
                    android:layout_width="wrap_content"
                    android:text="@string/dosto_characteristic_three" />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:text="@string/bullet_point" />
                <TextView
                    android:layout_column="2"
                    android:layout_width="wrap_content"
                    android:text="@string/dosto_characteristic_four" />
            </TableRow>
        </TableLayout>

        <TextView
            style="@style/GeneralTextViewBoxLeftRightPadding"
            android:id="@+id/dosto_exterior"
            android:layout_below="@id/table_row"
            android:paddingBottom="@dimen/padding_standard"
            android:text="@string/dosto_exterior"
            />

        <ImageView
            android:id="@+id/dosto_exterior_one"
            android:layout_width="match_parent"
            android:layout_height="@dimen/banner_height"
            android:layout_below="@id/dosto_exterior"
            android:scaleType="centerCrop"
            android:layout_marginBottom="10dp"
            android:src="@drawable/dosto_exterior_one" />
        <ImageView
            android:id="@+id/dosto_exterior_two"
            android:layout_width="match_parent"
            android:layout_height="@dimen/banner_height"
            android:layout_below="@id/dosto_exterior_one"
            android:layout_marginBottom="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/dosto_exterior_two" />
        <ImageView
            android:id="@+id/dosto_exterior_three"
            android:layout_width="match_parent"
            android:layout_height="@dimen/banner_height"
            android:layout_below="@id/dosto_exterior_two"
            android:scaleType="centerCrop"
            android:src="@drawable/dosto_exterior_three" />

        <TextView
            style="@style/GeneralTextViewBoxAllPadding"
            android:id="@+id/dosto_interior"
            android:layout_below="@id/dosto_exterior_three"
            android:text="@string/dosto_interior"
            />

        <ImageView
            android:id="@+id/dosto_interior_one"
            android:layout_width="match_parent"
            android:layout_height="@dimen/banner_height"
            android:layout_below="@id/dosto_interior"
            android:scaleType="centerCrop"
            android:layout_marginBottom="10dp"
            android:src="@drawable/dosto_interior_one" />
        <ImageView
            android:id="@+id/dosto_interior_two"
            android:layout_width="match_parent"
            android:layout_height="@dimen/banner_height"
            android:layout_below="@id/dosto_interior_one"
            android:scaleType="centerCrop"
            android:layout_marginBottom="10dp"
            android:src="@drawable/dosto_interior_two" />
        <ImageView
            android:id="@+id/dosto_interior_three"
            android:layout_width="match_parent"
            android:layout_height="@dimen/banner_height"
            android:layout_below="@id/dosto_interior_two"
            android:scaleType="centerCrop"
            android:src="@drawable/dosto_interior_three" />

    </RelativeLayout>


</ScrollView>